added QR code to share screen

--- a/src/workshop/templates/workshop_details.html
+++ b/src/workshop/templates/workshop_details.html
@@ -1,3 +1,4 @@
+<div class="p-8 w-10/12 ">
 <dl id="table">
     <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
       <dt class="text-sm font-medium text-gray-500">Workshop is active</dt>
@@ -36,3 +37,4 @@
     
   </dd>
 </dl>
+</div>
