--- a/src/dashboard/templates/dashboard_index.html
+++ b/src/dashboard/templates/dashboard_index.html
@@ -2,7 +2,7 @@
 
 {% block title %}Dashboard {{workshop}} {% endblock %}
 {% block content %}
-
+<div style="height: 100px;"></div>
 <main class="grid full place-items-center lg:px-8">
   <div id="spinner" class="htmx-indicator p-5">
     <div role="status">
@@ -17,7 +17,7 @@
   <label for="large-range" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Set zoom </label>
   <input id="large-range" min="1" max="10" value='10' step="1" onchange="showVal(this.value)" type="range" class="w-40 h-3 bg-gray-200 rounded-lg appearance-none cursor-pointer range-lg dark:bg-gray-700"/>
 --> 
-  <div style="display: inline-block">
+  <div style="display: inline-block; margin-left: 150px;">
     <div id="zoom">
       {% if zoomlevel == '0' %}
         {% include 'grid_zoom_standard.html' with cards=cards %}
