--- a/src/users/templates/userprofile.html
+++ b/src/users/templates/userprofile.html
@@ -1,4 +1,5 @@
 {%  extends 'base.html' %}
+{% block title %}Profile - {{user.first_name}} {% endblock %}
 
 {% block content %}
 <div style="height: 100px;"></div>
