moved order of fonts

--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -11,14 +11,15 @@
 	<meta name="description" content="Mapmaker Homepage" />
 	<meta name="keywords" content="Mapmaker workshop online tool netwerk" />
 	<meta name="author" content="Peter van Doorn" />
-	<link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
-	<link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
-	<link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet">
 	<!--Replace with your tailwind.css once created-->
 	{% tailwind_preload_css %}
 	{% tailwind_css %}
-	<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
+	<!--<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>-->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
 	<!--<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />-->
+	<link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+	<link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
+	<link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lexend">
 
 	<!--Fontawesome-->
@@ -41,7 +42,6 @@
 	<meta name="theme-color" content="#ffffff">
 	<!--Flowbite CSS Components-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
 
 </head>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
