add marketing message

--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -15,7 +15,9 @@
       </a>
       </div>
       <!--Right Col-->
-      
+      {% include 'sign_up_marketing.html' %}
+
+
     </div>
   </div>
   <div class="relative -mt-12 lg:-mt-24">
