--- a/src/users/templates/login.html
+++ b/src/users/templates/login.html
@@ -2,6 +2,7 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
+<div style="height: 100px;"></div>
 
 <div class="flex min-h-full items-center justify-center py-40 px-4 sm:px-6 lg:px-8 bg">
     <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
