changed the div for spacing to the base.html

--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -146,12 +146,7 @@
 	</div>
 </div>
 </nav>
-
-
-
-
-	<!--this is where the content of each page will live-->
-				
+<div style="height: 100px;"></div>				
 	
 	{% block content%}{% endblock %}
 
