--- a/src/homepage/templates/sign_up_marketing.html
+++ b/src/homepage/templates/sign_up_marketing.html
@@ -1,36 +1,18 @@
-{% extends "base.html" %}
-{% block title %}Sign up for email{% endblock %}
-
 {% block content %}
-
-<div class="flex min-h-full items-center justify-center py-40 px-4 sm:px-6 lg:px-8 bg">
-    <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
-      <div>
-        <h1 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-800">Sign up for our waiting list</h1>
-        <p> And be the first to hear when we go live! </p>
-      </div>
-      <form class="mt-8 space-y-6" action="#" method="POST">
+      <form class="mt-8 space-y-6 w-full" action="#" method="POST">
         <input type="hidden" name="remember" value="true">
         <div class="-space-y-px rounded-md shadow-sm">
           {% csrf_token %}
           {{form.as_p}}
-        </div>
-
-  
-        <div>
-          <button type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-indigo-700 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+          <br>
+          <button type="submit" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
             <span class="absolute inset-y-0 left-0 flex items-center pl-3">
-              <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
-              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" class="w-5 h-5 text-white dark:text-gray-400"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
             </span>
-            Sign up to email list
+            Get invited to use mapmaker.nl
           </button>
           <br>
 
         </div>
       </form>
-    </div>
-  </div>
-
-{% endblock %}
+   {% endblock %}
