--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -142,13 +142,9 @@
     <h3 class="my-4 text-3xl leading-tight">
       Get invited to early access of mapmaker.nl
     </h3>
-    {{form}}
-    <button type="submit" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
-      <span class="absolute inset-y-0 left-0 flex items-center pl-3">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" class="w-5 h-5 text-white dark:text-gray-400"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
-      </span>
-      Get invited to use mapmaker.nl
-    </button>
+    
+    {% include 'sign_up_marketing.html' %}
+
   </section>
 
 
