attempt to load own CSS styles

--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -12,10 +12,10 @@
 	<meta name="keywords" content="Mapmaker workshop online tool netwerk" />
 	<meta name="author" content="Peter van Doorn" />
 	<!--Replace with your tailwind.css once created-->
-	{% tailwind_preload_css %}
-	{% tailwind_css %}
+
+	<link rel="preload" href="{% static '/css/dist/styles.css' %}" as="style">
+	<link rel="stylesheet" href="{% static '/css/dist/styles.css' %}">
 	<!--<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>-->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
 	<!--<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />-->
 	<link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
 	<link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
