--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -13,8 +13,8 @@
 	<meta name="author" content="Peter van Doorn" />
 	<!--Replace with your tailwind.css once created-->
 
-	<link rel="preload" href="{% static '/css/dist/styles.css' %}" as="style">
-	<link rel="stylesheet" href="{% static '/css/dist/styles.css' %}">
+	<link rel="preload" href="{% static '/css/styles.css' %}" as="style">
+	<link rel="stylesheet" href="{% static '/css/styles.css' %}">
 	<!--<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>-->
 	<!--<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />-->
 	<link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
